test_suite/alan-2022-examples/failing/003100_mutation.alan
source F begin if 8 then relax, else relax end end
